// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`New Note component renders when submit 1`] = `
<NewNote
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <div
    className="NewNote"
  >
    <form
      onSubmit={[Function]}
    >
      <FormGroup
        bsClass="form-group"
        controlId="content"
      >
        <div
          className="form-group"
        >
          <FormControl
            bsClass="form-control"
            componentClass="textarea"
            onChange={[Function]}
            value=""
          >
            <textarea
              className="form-control"
              id="content"
              onChange={[Function]}
              value=""
            />
          </FormControl>
        </div>
      </FormGroup>
      <FormGroup
        bsClass="form-group"
        controlId="file"
      >
        <div
          className="form-group"
        >
          <ControlLabel
            bsClass="control-label"
            srOnly={false}
          >
            <label
              className="control-label"
              htmlFor="file"
            >
              Attachment
            </label>
          </ControlLabel>
          <FormControl
            bsClass="form-control"
            componentClass="input"
            onChange={[Function]}
            type="file"
          >
            <input
              className=""
              id="file"
              onChange={[Function]}
              type="file"
            />
          </FormControl>
        </div>
      </FormGroup>
      <LoaderButton
        block={true}
        bsSize="large"
        bsStyle="primary"
        disabled={true}
        isLoading={true}
        loadingText="Creating…"
        text="Create"
        type="submit"
      >
        <Button
          active={false}
          block={true}
          bsClass="btn"
          bsSize="large"
          bsStyle="primary"
          className="LoaderButton "
          disabled={true}
          type="submit"
        >
          <button
            className="LoaderButton  btn btn-lg btn-primary btn-block"
            disabled={true}
            type="submit"
          >
            <Glyphicon
              bsClass="glyphicon"
              className="spinning"
              glyph="refresh"
            >
              <span
                className="spinning glyphicon glyphicon-refresh"
              />
            </Glyphicon>
            Creating…
          </button>
        </Button>
      </LoaderButton>
    </form>
  </div>
</NewNote>
`;

exports[`New Note component renders when submit with file bigger than MAX_ATTACHMENT_SIZE 1`] = `
<NewNote
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <div
    className="NewNote"
  >
    <form
      onSubmit={[Function]}
    >
      <FormGroup
        bsClass="form-group"
        controlId="content"
      >
        <div
          className="form-group"
        >
          <FormControl
            bsClass="form-control"
            componentClass="textarea"
            onChange={[Function]}
            value=""
          >
            <textarea
              className="form-control"
              id="content"
              onChange={[Function]}
              value=""
            />
          </FormControl>
        </div>
      </FormGroup>
      <FormGroup
        bsClass="form-group"
        controlId="file"
      >
        <div
          className="form-group"
        >
          <ControlLabel
            bsClass="control-label"
            srOnly={false}
          >
            <label
              className="control-label"
              htmlFor="file"
            >
              Attachment
            </label>
          </ControlLabel>
          <FormControl
            bsClass="form-control"
            componentClass="input"
            onChange={[Function]}
            type="file"
          >
            <input
              className=""
              id="file"
              onChange={[Function]}
              type="file"
            />
          </FormControl>
        </div>
      </FormGroup>
      <LoaderButton
        block={true}
        bsSize="large"
        bsStyle="primary"
        disabled={true}
        isLoading={false}
        loadingText="Creating…"
        text="Create"
        type="submit"
      >
        <Button
          active={false}
          block={true}
          bsClass="btn"
          bsSize="large"
          bsStyle="primary"
          className="LoaderButton "
          disabled={true}
          type="submit"
        >
          <button
            className="LoaderButton  btn btn-lg btn-primary btn-block"
            disabled={true}
            type="submit"
          >
            Create
          </button>
        </Button>
      </LoaderButton>
    </form>
  </div>
</NewNote>
`;

exports[`New Note component renders without crashing 1`] = `
<div
  className="NewNote"
>
  <form
    onSubmit={[Function]}
  >
    <FormGroup
      bsClass="form-group"
      controlId="content"
    >
      <FormControl
        bsClass="form-control"
        componentClass="textarea"
        onChange={[Function]}
        value=""
      />
    </FormGroup>
    <FormGroup
      bsClass="form-group"
      controlId="file"
    >
      <ControlLabel
        bsClass="control-label"
        srOnly={false}
      >
        Attachment
      </ControlLabel>
      <FormControl
        bsClass="form-control"
        componentClass="input"
        onChange={[Function]}
        type="file"
      />
    </FormGroup>
    <LoaderButton
      block={true}
      bsSize="large"
      bsStyle="primary"
      disabled={true}
      isLoading={false}
      loadingText="Creating…"
      text="Create"
      type="submit"
    />
  </form>
</div>
`;
